--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -10,9 +10,27 @@
         <li class="nav-item">
             <%= link_to 'Friends', friends_path, class:"nav-link" %>  
         </li>
-        <li class="nav-item">
+        
+        <% if user_signed_in? %>
+          <li class="nav-item">
+          <%= link_to 'Edit Profile', edit_user_registration_path, class:"nav-link" %>  
+          </li>
+          <li class="nav-item">
+              <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class:"nav-link" %>  
+          </li>
+          <li class="nav-item">
             <%= link_to 'New Friend', new_friend_path, class:"nav-link" %>  
-        </li>
+          </li>
+        <% else %>
+          <li class="nav-item">
+          <%= link_to 'Sign Up', new_user_registration_path, class:"nav-link" %>  
+          </li>
+          <li class="nav-item">
+              <%= link_to 'Sign In', new_user_session_path, class:"nav-link" %>  
+          </li>
+        <% end %>
+       
+        
         <li class="nav-item">
             <%= link_to 'About Us', home_about_path, class:"nav-link" %>  
         </li>
