--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -35,6 +35,11 @@
     
     <%= form.text_field :twitter, class:"form-control", placeholder:"Twitter" %>
   </div>
+
+  <div class="field form-group">
+    
+    <%= form.text_field :user_id, class:"form-control", value: current_user.id, id: :friend_user_id, type: :hidden %>
+  </div>
 <br/>
   <div class="actions">
     <%= form.submit class: "btn btn-secondary"%>
